syntax = "proto3";

package auth.user.service;

message GrantedAuthRolesPb {
    repeated string granted_roles = 2;
}
